# youtube-analytics-project

./: pyproject.toml
homework-2/: main.py
src/: channel.py
