[tool.poetry]
name = "youtube-analytics-project"
version = "0.1.0"
description = ""
authors = ["art_bir <art.bir.1987@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-api-python-client = "^2.108.0"
isodate = "^0.6.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
